--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,9 @@
               "browserTarget": "pprl-ui:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
